Dangit, restore barcode

--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -402,8 +402,8 @@
         state.beta_metric = "{{beta_metric}}";
         //Just using test barcode because I can never remember a valid one.
         // DONT MERGE WITH FAKE BARCODE HERE.
-        //state.sample_id = "{{sample.sample_barcode}}";
-        state.sample_id = "000023984";
+        state.sample_id = "{{sample.sample_barcode}}";
+        //state.sample_id = "000023984";
         //state.sample_id = "000023127";
 
         state.barcode_prefix = "{{barcode_prefix}}";
