--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -50,10 +50,8 @@
             type: "GET",
             success: function(data)
             {
-                resultMap = {}
-                for (var i =0; i < data.length; i++)
-                    resultMap[data[i]] = data[i]; //TODO: Need friendly names
-                populateSelect("#dataset", resultMap, data[0]);
+                resultMap = data
+                populateSelect("#dataset", resultMap, "16S");
                 //TODO FIXME HACK:
                 //Updating $("#dataset") should have automatically updated
                 //the state but jquery's change event is not triggering linked
@@ -77,7 +75,8 @@
         {
             var option = $('<option></option>')
                 .attr("value", v)
-                .text(value_to_text[v]);
+                .text(v);
+//                .text(value_to_text[v]);  //It should be this, but public api needs to send down friendly names
 
             if (v == active_value)
                 option.attr('selected','selected');
@@ -292,12 +291,14 @@
         }
 
         $("#sample_type").text(state.sample_type).removeClass("spinner-grow spinner-grow-sm")
-        $("#dataset_name").text(DATASET_FRIENDLY[state.dataset_input.value]).removeClass("spinner-grow spinner-grow-sm")
+        $("#dataset_name").text(state.dataset_input.value).removeClass("spinner-grow spinner-grow-sm")
         // TODO: Fill in these URLs
         // retrieveText("GET", null, null).then(setInfoText("#n_bacteria"));
         // retrieveText("GET", null, null).then(setInfoText("#n_archaea"));
         // retrieveText("GET", null, null).then(setInfoText("#n_bacteria_background"));
         // retrieveText("GET", null, null).then(setInfoText("#n_archaea_background"));
+        // Not actually in compare tab, need to separate out?
+        // retrieveText("GET", null, null).then(setInfoText("#top_ranked_genus_from_plot"));
         retrieveNeighbors(state, 1)
             .then(queryNeighborAndSelfMetadata(state, ["age_years", "sugary_sweets_frequency"]))
             .then(fillResults(state, ["#age_nearest_neighbor", "#more_or_less_sweets_nearest_neighbor"]))
@@ -312,7 +313,7 @@
             var query = $.ajax(
             {
                 url: state.public_endpoint + "/dataset/" +
-                     DATA_TYPE_FRIENDLY[state.data_type_input.value] +
+                     state.dataset_input.value +
                      "/diversity/alpha/group/" +
                      state.alpha_metric + "?" + $.param({summary_statistics: true}),
                 method: "POST",
@@ -339,7 +340,7 @@
         var queryMe = $.ajax(
             {
                 url: state.public_endpoint + "/dataset/" +
-                     DATA_TYPE_FRIENDLY[state.data_type_input.value] +
+                     state.dataset_input.value +
                      "/diversity/alpha/single/" +
                      state.alpha_metric + "/" + state.barcode_prefix + state.sample_id
             }
@@ -387,7 +388,8 @@
             return
         }
 
-        var url = state.public_endpoint + '/plotting/diversity/beta/' + state.beta_metric + '/pcoa/' + state.sample_type + '/emperor?metadata_categories=age_cat&metadata_categories=bmi_cat&metadata_categories=country&metadata_categories=title';
+        var url = state.public_endpoint + '/plotting/diversity/beta/' + state.beta_metric + '/pcoa/' + state.sample_type + '/emperor?metadata_categories=age_cat&metadata_categories=bmi_cat&metadata_categories=country';
+        // url += '&metadata_categories=title'  //We want to include this, but public api doesn't support it yet.
         loadEmperor(
             url,
             "/static/vendor/emperor",
@@ -399,9 +401,9 @@
     function updateTaxonomy(taxonomyData, state){
         // Seems taxonomy table is static for now, but need to make taxa
         // rank plot
-        var sampling_url = state.public_endpoint + '/dataset/' + DATA_TYPE_FRIENDLY[state.data_type_input.value] + '/taxonomy/ranks/taxonomy?' +
+        var sampling_url = state.public_endpoint + '/dataset/' + state.dataset_input.value + '/taxonomy/ranks/taxonomy?' +
             $.param({sample_size: 30000});
-        var my_sample_url = state.public_endpoint + '/dataset/' + DATA_TYPE_FRIENDLY[state.data_type_input.value] + '/taxonomy/ranks/taxonomy/sample/' + state.barcode_prefix + state.sample_id
+        var my_sample_url = state.public_endpoint + '/dataset/' + state.dataset_input.value + '/taxonomy/ranks/taxonomy/sample/' + state.barcode_prefix + state.sample_id
 
         query1 = $.ajax({
             url: sampling_url,
@@ -529,31 +531,21 @@
         /* Whenever dataset is changed, we fire off ajax requests
            to grab new info for the plots.  */
         new DelegateOutput(function(dataset){
-            //TODO: Decide how to tell each control it is waiting on ajax data
-            updateCompare(state)
-            updateDiversity(state)
-            updateSimilarity(null, state)
-            updateTaxonomy(null, state)
 
             // Magic string must match default string used to initialize select box
             if (dataset == "Loading...")
                 return
 
-            //TODO Insert some calls to ajax, grab the result, -then- update
-            //    ...
-            $.ajax({
-                url: formatAlphaURL(state),
-                type: "GET",
-                success: function(data){ updateDiversity(data, state); }
-            });
+            //TODO: Decide how to tell each control it is waiting on ajax data
+            updateSimilarity(null, state)
+            updateTaxonomy(null, state)
 
-            compareData = { "result": "Compare AJAX: " + dataset }
-            diversityData = { "result": "Diversity AJAX: " + dataset }
+
             similarityData = { "result": "Similarity AJAX: " + dataset }
             taxonomyData = { "result": "Taxonomy AJAX: " + dataset }
 
-            updateCompare(compareData, state);
-            updateDiversity(diversityData, state);
+            updateCompare(state);
+            updateDiversity(state);
             updateSimilarity(similarityData, state);
             updateTaxonomy(taxonomyData, state);
         }, state.dataset_input);
@@ -708,7 +700,7 @@
                     <p>
                     In the plot below, you can see the most commonly observed
                     microbial genera in the dataset, and distribution of ranks of
-                    those genera.  For example, TOP_RANKED_GENUS_FROM_PLOT
+                    those genera.  For example, <span id="top_ranked_genus_from_plot" class="info-loader text-info" >TOP_RANKED_GENUS_FROM_PLOT</span>
                     typically has the highest relative abundance of samples in the
                     dataset.
                     </p>
