--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -35,6 +35,7 @@
 <script src="/static/vendor/emperor/emperor_loader.js"></script>
 
 <script>
+    "use strict"
     function formatAlphaURL(state) {
         let base = state.public_endpoint + '/plotting/diversity/alpha/' + state.alpha_metric + '/percentiles-plot';
         if (state.sample_id !== "") {
@@ -44,13 +45,13 @@
     }
 
     function refreshDatasets(state) {
-        url = state.public_endpoint + '/available/dataset';
+        let url = state.public_endpoint + '/available/dataset';
         $.ajax({
             url: url,
             type: "GET",
             success: function(data)
             {
-                resultMap = data
+                let resultMap = data
                 populateSelect("#dataset", resultMap, "16S");
                 //TODO FIXME HACK:
                 //Updating $("#dataset") should have automatically updated
@@ -69,16 +70,16 @@
     }
 
     function populateSelect(select_selector, value_to_text, active_value){
-        var select = $(select_selector)
+        let select = $(select_selector)
         select.empty()
-        for (var v in value_to_text)
+        for (let v in value_to_text)
         {
-            var option = $('<option></option>')
+            let option = $('<option></option>')
                 .attr("value", v)
                 .text(v);
 //                .text(value_to_text[v]);  //It should be this, but public api needs to send down friendly names
 
-            if (v == active_value)
+            if (v === active_value)
                 option.attr('selected','selected');
 
             select.append(option)
@@ -93,12 +94,12 @@
                 ajax: {
                     url: state.public_endpoint + "/taxonomy/present/single/" + state.taxonomy + "/" + state.barcode_prefix + state.sample_id,
                     dataSrc: function(d){
-                        var representatives = {}
-                        var generaSums = {}
+                        let representatives = {}
+                        let generaSums = {}
                         //Collapse to genera (Don't show separate rows per species)
-                        for (var i = 0; i < d.data.length; i++){
+                        for (let i = 0; i < d.data.length; i++){
                             //Can't just key by genus because genus can be null/undefined.  Argh.
-                            var genus_key = d.data[i].Kingdom + ";" +
+                            let genus_key = d.data[i].Kingdom + ";" +
                                             d.data[i].Phylum + ";" +
                                             d.data[i].Class + ";" +
                                             d.data[i].Order + ";" +
@@ -114,10 +115,10 @@
                                 generaSums[genus_key] = d.data[i].relativeAbundance
                             }
                         }
-                        var newData = []
-                        for (genus_key in generaSums){
-                            rep = representatives[genus_key]
-                            sum = generaSums[genus_key]
+                        let newData = []
+                        for (let genus_key in generaSums){
+                            let rep = representatives[genus_key]
+                            let sum = generaSums[genus_key]
                             rep.relativeAbundance = sum
                             newData.push(rep)
                         }
@@ -169,7 +170,7 @@
         }
 
         function retrieveNeighbors(state, k){
-            url = state.public_endpoint + '/dataset/' + state.dataset + '/diversity/beta/' + state.beta_metric + '/nearest'
+            let url = state.public_endpoint + '/dataset/' + state.dataset + '/diversity/beta/' + state.beta_metric + '/nearest'
             return $.ajax({
                 method: "GET",
                 url: url,
@@ -185,7 +186,7 @@
         function queryNeighborAndSelfMetadata(state, metadata_cats){
             return function(result, textStatus, jqXHR)
             {
-                var toQuery = result;
+                let toQuery = result;
                 toQuery.push(state.barcode_prefix + state.sample_id);
 
                 return $.ajax(
@@ -197,7 +198,7 @@
                 }).fail(function(result, textStatus, errorThrown){
                     console.log("Couldn't retrieve metadata for neighbors and self " + errorThrown)
                 }).then(function(result, textStatus, jqXHR){
-                    thenner = {}
+                    let thenner = {}
                     thenner.then = function(func){
                         // Need to pass on the sample ids. Argh.
                         return func(toQuery, result);
@@ -213,39 +214,39 @@
             {
                 // First selector, age, Second selector, sweets
                 // No similarity between the two, so we just have to handle both
-                me = samplesQueried.pop()
-                my_data = sampleResults.pop()
+                let me = samplesQueried.pop()
+                let my_data = sampleResults.pop()
 
                 if (me !== (state.barcode_prefix + state.sample_id))
                     console.log("Bad call to fill results, sample id mismatch")
 
-                for (var selector_index = 0; selector_index < selectors.length; selector_index++)
+                for (let selector_index = 0; selector_index < selectors.length; selector_index++)
                 {
-                    if (selectors[selector_index] == "#age_nearest_neighbor")
+                    if (selectors[selector_index] === "#age_nearest_neighbor")
                     {
                         // Find age of first neighbor with age
-                        var nearest_age = "Unspecified"
-                        for (var i = 0; i < samplesQueried.length; i++)
+                        let nearest_age = "Unspecified"
+                        for (let i = 0; i < samplesQueried.length; i++)
                         {
-                            if (sampleResults[i][selector_index] != "Unspecified")
+                            if (sampleResults[i][selector_index] !== "Unspecified")
                             {
                                 nearest_age = sampleResults[i][selector_index];
                                 break;
                             }
                         }
-                        if (nearest_age == "Unspecified")
+                        if (nearest_age === "Unspecified")
                             setInfoText(selectors[selector_index])("chose not to provide their age", null, null);
                         else
                             setInfoText(selectors[selector_index])("is " + nearest_age + " years old", null, null);
                     }
-                    if (selectors[selector_index] == "#more_or_less_sweets_nearest_neighbor")
+                    if (selectors[selector_index] === "#more_or_less_sweets_nearest_neighbor")
                     {
                         // Find string value for first neighbor with a string value
-                        var nearest_sweets = "Unspecified"
-                        for (var i = 0; i < samplesQueried.length; i++)
+                        let nearest_sweets = "Unspecified"
+                        for (let i = 0; i < samplesQueried.length; i++)
                         {
-                            if (sampleResults[i][selector_index] != "Unspecified" &&
-                                sampleResults[i][selector_index] != "Not provided")
+                            if (sampleResults[i][selector_index] !== "Unspecified" &&
+                                sampleResults[i][selector_index] !== "Not provided")
                             {
                                 nearest_sweets = sampleResults[i][selector_index];
                                 break;
@@ -253,7 +254,7 @@
                         }
 
                         // Comparing metadata is an absolute nightmare.
-                        var possible_values = {
+                        let possible_values = {
                             "Unspecified" : NaN,
                             "Not provided" : NaN,
                             "Never" : 0,
@@ -263,10 +264,10 @@
                             "Daily": 4
                         }
 
-                        var my_sweets = possible_values[my_data[selector_index]]
-                        var their_sweets = possible_values[nearest_sweets]
+                        let my_sweets = possible_values[my_data[selector_index]]
+                        let their_sweets = possible_values[nearest_sweets]
 
-                        var info_text = "";
+                        let info_text = "";
                         if (isNaN(my_sweets)){
                             if (isNaN(their_sweets))
                                 info_text = "chose not to say how many sweets they eat";
@@ -278,7 +279,7 @@
                                 info_text = "eats more sugary sweets than you";
                             else if (my_sweets > their_sweets)
                                 info_text = "eats fewer sugary sweets than you";
-                            else if (my_sweets == their_sweets)
+                            else if (my_sweets === their_sweets)
                                 info_text = "eats about the same number of sugary sweets as you";
                             else
                                 info_text = "chose not to say how many sweets they eat";
@@ -307,10 +308,10 @@
     function updateDiversity(state){
         //https://www-dev.ucsd.edu/results-api/diversity/alpha/group/faith_pd?summary_statistics=true
 
-        queries = []
-        countries = ["USA", "United Kingdom"];
-        for (country of countries){
-            var query = $.ajax(
+        let queries = []
+        let countries = ["USA", "United Kingdom"];
+        for (let country of countries){
+            let query = $.ajax(
             {
                 url: state.public_endpoint + "/dataset/" +
                      state.dataset_input.value +
@@ -337,7 +338,7 @@
             queries.push(query)
         }
 
-        var queryMe = $.ajax(
+        let queryMe = $.ajax(
             {
                 url: state.public_endpoint + "/dataset/" +
                      state.dataset_input.value +
@@ -347,16 +348,16 @@
         )
         queries.push(queryMe)
         $.when.apply($, queries).done(function(){
-            var traces = []
-            for (var i = 0; i < countries.length; i++)
+            let traces = []
+            for (let i = 0; i < countries.length; i++)
             {
-                var country = countries[i]
-                var alpha_summary = arguments[i][0]
+                let country = countries[i]
+                let alpha_summary = arguments[i][0]
 
-                var fill = "tozeroy"
+                let fill = "tozeroy"
                 if (i > 0)
                     fill = "tozeroy"
-                var trace = {
+                let trace = {
                     name: countries[i],
                     x: alpha_summary.group_summary.percentile_values,
                     y: alpha_summary.group_summary.percentile,
@@ -365,9 +366,9 @@
                 traces.push(trace)
             }
 
-            var myQueryIndex = countries.length;
-            var myAlphaMetric = arguments[myQueryIndex][0].data
-            var trace = {
+            let myQueryIndex = countries.length;
+            let myAlphaMetric = arguments[myQueryIndex][0].data
+            let trace = {
                 name: "Me",
                 x: [myAlphaMetric, myAlphaMetric],
                 y: [0, 100],
@@ -375,20 +376,21 @@
             }
             traces.push(trace)
 
-            layout = {
+            let layout = {
                 title: "Faith PD by Country"
             }
             Plotly.newPlot("diversity-vis", traces)
         })
     }
+
     function updateSimilarity(similarityData, state){
-        if (similarityData == null){
+        if (similarityData === null){
             $("#emperor-notebook").empty();
 <!--        $(".content").nextAll().remove(); //Why does emperor put stuff out here?  This is hard to find and deal with...-->
             return
         }
 
-        var url = state.public_endpoint + '/plotting/diversity/beta/' + state.beta_metric + '/pcoa/' + state.sample_type + '/emperor?metadata_categories=age_cat&metadata_categories=bmi_cat&metadata_categories=country';
+        let url = state.public_endpoint + '/plotting/diversity/beta/' + state.beta_metric + '/pcoa/' + state.sample_type + '/emperor?metadata_categories=age_cat&metadata_categories=bmi_cat&metadata_categories=country';
         // url += '&metadata_categories=title'  //We want to include this, but public api doesn't support it yet.
         loadEmperor(
             url,
@@ -401,31 +403,31 @@
     function updateTaxonomy(taxonomyData, state){
         // Seems taxonomy table is static for now, but need to make taxa
         // rank plot
-        var sampling_url = state.public_endpoint + '/dataset/' + state.dataset_input.value + '/taxonomy/ranks/taxonomy?' +
+        let sampling_url = state.public_endpoint + '/dataset/' + state.dataset_input.value + '/taxonomy/ranks/taxonomy?' +
             $.param({sample_size: 30000});
-        var my_sample_url = state.public_endpoint + '/dataset/' + state.dataset_input.value + '/taxonomy/ranks/taxonomy/sample/' + state.barcode_prefix + state.sample_id
+        let my_sample_url = state.public_endpoint + '/dataset/' + state.dataset_input.value + '/taxonomy/ranks/taxonomy/sample/' + state.barcode_prefix + state.sample_id
 
-        query1 = $.ajax({
+        let query1 = $.ajax({
             url: sampling_url,
             type: "GET"
         });
 
-        query2 = $.ajax({
+        let query2 = $.ajax({
             url: my_sample_url,
             type: "GET"
         });
 
         $.when(query1, query2).done(function(sampling_results, sample_results){
-            var X = 10
-            topXOrdered = sampling_results[0]["Taxa-order"].slice(0,X)
+            let X = 10
+            let topXOrdered = sampling_results[0]["Taxa-order"].slice(0,X)
             topXOrdered.reverse()
-            topX = new Set(topXOrdered)
+            let topX = new Set(topXOrdered)
 
-            var sampling_x = []
-            var sampling_y = []
-            var sample_x = []
-            var sample_y = []
-            for (var i =0; i < sampling_results[0].Rank.length; i++)
+            let sampling_x = []
+            let sampling_y = []
+            let sample_x = []
+            let sample_y = []
+            for (let i =0; i < sampling_results[0].Rank.length; i++)
             {
                 if (topX.has(sampling_results[0].Taxon[i]))
                 {
@@ -434,7 +436,7 @@
                 }
             }
 
-            for (var i = 0; i < sample_results[0].Rank.length; i++)
+            for (let i = 0; i < sample_results[0].Rank.length; i++)
             {
                 if (topX.has(sample_results[0].Taxon[i]))
                 {
@@ -443,8 +445,7 @@
                 }
             }
 
-
-            var trace1 = {
+            let trace1 = {
                 "name": "Rank Distributions",
                 "showlegend": false,
                 "spanmode": "hard",
@@ -460,15 +461,15 @@
                 },
             }
 
-            var trace2 = {
+            let trace2 = {
                 "type": "scatter",
                 "mode": "markers",
                 "name": "My Sample",
                 "x": sample_x,
                 "y": sample_y
             }
-            var data = [trace1, trace2]
-            var layout = {
+            let data = [trace1, trace2]
+            let layout = {
                 "title": "Ranked Relative Abundance",
                 "yaxis": {
                     "automargin": true,
@@ -482,7 +483,7 @@
 
     //Called immediately after a tab is shown
     function onTabShown(evt){
-        if (evt.target.id == "similarity-tab")
+        if (evt.target.id === "similarity-tab")
         {
             // Emperor doesn't seem to understand that the tab has been shown
             // by default.  So we'll trigger a resize event on the window
@@ -497,14 +498,14 @@
     function init(){
         // Hook up fake tab links
         $('.fake-tab').click(function() {
-            var link = this.dataset.link
+            let link = this.dataset.link
             $(link).click();
         });
 
         // Listen for tab changes
         $('.nav-link').on('shown.bs.tab', onTabShown);
 
-        var state = {}
+        let state = {}
 
         // Initialize state
         state.dataset_input = new JQuerySelectInput("Dataset", "#dataset");
@@ -520,8 +521,8 @@
 
         state.barcode_prefix = "{{barcode_prefix}}";
         state.public_endpoint = "{{public_endpoint}}";
-        var sample_type = "oral"
-        if ("{{sample.sample_site}}" == "Stool")
+        let sample_type = "oral"
+        if ("{{sample.sample_site}}" === "Stool")
             sample_type="fecal"
         state.sample_type = sample_type
 
@@ -533,16 +534,15 @@
         new DelegateOutput(function(dataset){
 
             // Magic string must match default string used to initialize select box
-            if (dataset == "Loading...")
+            if (dataset === "Loading...")
                 return
 
             //TODO: Decide how to tell each control it is waiting on ajax data
             updateSimilarity(null, state)
             updateTaxonomy(null, state)
 
-
-            similarityData = { "result": "Similarity AJAX: " + dataset }
-            taxonomyData = { "result": "Taxonomy AJAX: " + dataset }
+            let similarityData = { "result": "Similarity AJAX: " + dataset }
+            let taxonomyData = { "result": "Taxonomy AJAX: " + dataset }
 
             updateCompare(state);
             updateDiversity(state);
