Adds new accounts/acct_id/sources/src_id/remove route to remove a source (that has no samples associated with it)

--- a/microsetta_interface/templates/account_overview.jinja2
+++ b/microsetta_interface/templates/account_overview.jinja2
@@ -75,6 +75,7 @@
             </div>
         </div>
         {% for source in sources %}
+        {{source}}
         <div class="container list-group-item {{loop.cycle('odd', 'even') }}">
             <div class="row">
                 <div class="col-sm">
