--- a/microsetta_interface/templates/sitebase.jinja2
+++ b/microsetta_interface/templates/sitebase.jinja2
@@ -23,9 +23,12 @@
         }
     </style>
 
+
     <!-- jquery must be enabled before bootstrap for collapsible functionality -->
     <script src="/static/vendor/js/jquery-3.4.1.min.js"></script>
     <script src="/static/vendor/js/jquery.validate.min.js"></script>
+    <!-- Argh, bootstrap 4 requires an old version of popper.  Should we update to bootstrap 5? -->
+    <script src="/static/vendor/popper-1.11.0/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"></script>
     <script src="/static/vendor/bootstrap-4.4.1-dist/js/bootstrap.min.js"></script>
     <script src="/static/input_util.js"></script>
 
