Adds new accounts/acct_id/sources/src_id/remove route to remove a source (that has no samples associated with it)

--- a/microsetta_interface/templates/source.jinja2
+++ b/microsetta_interface/templates/source.jinja2
@@ -3,6 +3,12 @@
 {% set show_breadcrumbs = True %}
 {% block head %}
     <link rel="stylesheet" href="/static/vendor/font-awesome-4.7.0/css/font-awesome.min.css"/>
+    <style>
+        .tooltipper {
+          display: inline-block; /* tooltip misplaced horizontally otherwise */
+        }
+
+    </style>
     <script src="/static/vendor/js/jquery.form-4.2.2/jquery.form.min.js"></script>
     <script>
         let taxonomy = "{{taxonomy}}";
@@ -81,6 +87,12 @@
             return window.confirm(confirmMsg);
         }
 
+        function verifyDeleteSource(sourceId){
+            let confirmMsg = "Deleting this source will discard all surveys associated with it. " +
+                "This operation cannot be undone.  Are you sure you want to delete this source? ";
+            return window.confirm(confirmMsg);
+        }
+
         function renderButton(sampleId) {
             var buttonDiv = document.getElementById("btn-view-" + sampleId);
             var button = document.createElement("a");
@@ -113,6 +125,11 @@
             });
         }
 
+        function enableTooltips(){
+            $('.tooltipper').tooltip({position: "bottom"});
+            console.log("Huhh")
+        }
+
         // Wait for the DOM to be ready
         $(document).ready(function(){
             let form_name = 'list_kit_form';
@@ -124,6 +141,8 @@
             {% for sample in samples %}
                 addButtonIfData("{{ sample.sample_id }}", "{{ sample.sample_barcode }}")
             {% endfor %}
+
+            enableTooltips()
         });
     </script>
 {% endblock %}
@@ -258,5 +277,16 @@
         {% endfor %}
     </div>
     {% endif %}
+    <hr style="border-top: dotted 1px"/>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-12 {% if samples|length > 0 %}tooltipper{% endif %}" data-title="Sources with one or more samples assigned cannot be deleted.  All samples above must be removed prior to deleting this source.">
+                <form name="delete_{{source_id}}_form" method="post" action="/accounts/{{ account_id }}/sources/{{ source_id }}/remove" onsubmit="return verifyDeleteSource('{{source_id}}');">
+                    <button type="submit" class="btn btn-danger btn-block" {% if samples|length > 0 %}disabled{% endif %}>Delete Source: {{source_name}}</button>
+                </form>
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
