Disabling emperor to see if its breaking taxonomy

--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -392,13 +392,13 @@
 
         let url = state.public_endpoint + '/dataset/' + state.dataset_input.value + '/plotting/diversity/beta/' + state.beta_metric + '/pcoa/' + state.sample_type + '/emperor?metadata_categories=age_cat&metadata_categories=bmi_cat&metadata_categories=country';
         // url += '&metadata_categories=title';  //We want to include this, but public api doesn't support it yet.
-        loadEmperor(
-            url,
-            "/static/vendor/emperor",
-            function(){
-            },
-            state.barcode_prefix + state.sample_id
-        );
+        //loadEmperor(
+        //    url,
+        //    "/static/vendor/emperor",
+        //    function(){
+        //    },
+        //    state.barcode_prefix + state.sample_id
+        //);
     }
     function updateTaxonomy(taxonomyData, state){
         // Rebuild taxonomy table when we switch dataset
