--- a/microsetta_interface/templates/sitebase.jinja2
+++ b/microsetta_interface/templates/sitebase.jinja2
@@ -38,6 +38,7 @@
       Administrator Toolbar
       <a class="btn btn-outline-success" href="/admin/system_message">System Panel</a>
       <a class="btn btn-outline-success" href="/admin/emperor_playground">Emperor Playground</a>
+      <a class="btn btn-outline-success" href="/admin/empress_playground">Empress Playground</a>
       <a class="btn btn-outline-success" href="{{authrocket_url}}/logout?redirect_uri={{endpoint}}/logout">Log Out</a>
       <form class="form-inline" action="/admin/account_search" method="get">
         <input id="email_query" name="email_query" class="form-control mr-sm-2" type="search" placeholder="User Email" aria-label="Search"/>
