STY make file names consistent

--- a/microsetta_interface/templates/empress-template.jinja2
+++ b/microsetta_interface/templates/empress-template.jinja2
@@ -252,7 +252,7 @@
 
         <!-- Side panel -->
         <div id="side-panel" class="unselectable-text hidden">
-          {% include 'empress-side-panel.html'%}
+          {% include 'empress-side-panel.jinja2'%}
         </div>
 
         <!-- toast -->
